# applifting-exercise

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/applifting_exercise/: __main__.py  config.conf  core.py  database.conf  database.py  database_schema.sql  exceptions.py  models.py  web.py  web_base.py  web_middlewares.py  web_v1.py
src/applifting_exercise/services/: __init__.py  offers.py
tests/: conftest.py  docker-compose.yml  test_base_web_server.py  test_offers.py  test_prices.py  test_products.py  test_register_login.py
