[tool.poetry]
name = "applifting_exercise"
version = "2.0.0"
description = "Applifting exercise project"
authors = ["Jiri Tribula <jiri.tribula@gmail.com>"]
packages = [
    {include="applifting_exercise", from="src"}
]
include = ["*.sql", "py.typed", "favicon.ico"]

[tool.poetry.dependencies]
python = "^3.10"

aiohttp = "^3.8.1"
asyncpg = "^0.26.0"
bcrypt = "^3.2.2"
pyhocon = "^0.3.59"
python-jose = "^3.3.0"
schema = "^0.7.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
pytest-docker-compose = "^3.2.1"
pytest-mypy = "^0.9.1"
pytest-pylint = "^0.18.0"
tenacity = "^8.0.1"
aioresponses = "^0.7.3"
# https://github.com/spulec/freezegun/issues/437
freezegun = "1.0.0"
pytest-freezegun = "^0.4.2"
types-freezegun = "^1.1.10"
pywin32 = "304"
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.scripts]
run-applifting-exercise = "applifting_exercise.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--verbose --pylint --pylint-rcfile=pyproject.toml --cov=applifting_exercise --cov-report html --mypy --docker-compose=tests"

[tool.pylint.master]
good-names = "db,e"

[tool.pylint.messages_control]
enable = "all"
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    unspecified-encoding,
    wrong-import-order,
    redefined-outer-name,
    logging-not-lazy,
    consider-using-f-string,
    too-many-return-statements
"""
ignored_argument_names = "_.*|^ignored_|^unused_|args|kwargs"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
